[package]
name = "esp-wifi-test"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"

[dependencies]
esp32s3-hal = { version = "0.13.0", features = ["embassy", "embassy-time-timg0", "async", "log", "embassy-executor-thread"]}
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32s3","log"] }
esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "a38b3ca", features = ["esp32s3", "embedded-svc", "wifi", "async", "embassy-net", "phy-enable-usb"] }

log = "0.4.20"
fugit = "0.3.7"
static_cell = { version = "2.0.0", features = ["nightly"] }

embedded-svc = { version = "0.26.4", default-features = false, features = [] }
embedded-io-async = { version = "0.6.0" }
futures-util = { version = "0.3.29", default-features = false }

embassy-net = { version = "0.2.1", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "0.3.3", features = ["nightly", "integrated-timers"] }
embassy-sync = { version = "0.4.0" }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.1.5", features = ["nightly"] }
